# rewind-monorepo

./: README.md  SPECIFICATIONS.md  check_model.py  llms.md  pyproject.toml  randnotizen.md  requirements.txt  setup.sh
apps/core/: engine.py
apps/web_ui/: main.py
core/: engine.py
docs/: ORACLE.md
scripts/: import_folder.py  seed_knowledge.py
